# IC_Project2

./: .gitignore  README.md
PartA_1/: CMakeLists.txt  README.md  build.sh  main.cpp  test.txt  test2.txt  testBitStream.cpp  testGolomb.cpp
PartA_1/BitStream/: CMakeLists.txt
PartA_1/BitStream/include/: BitStream.h
PartA_1/BitStream/src/: BitStream.cpp
PartA_1/Golomb/: CMakeLists.txt
PartA_1/Golomb/include/: Golomb.h
PartA_1/Golomb/src/: Golomb.cpp
PartA_1/classes/: BitStream.cpp  BitStream.h  Golomb.cpp  Golomb.h
PartB/: .duvidas.txt.swp  .output.txt.swp  CMakeLists.txt  build.sh  codecLossless.cpp  codecLossy.cpp  configure.sh  duvidas.txt  ex1.cpp  output.txt  outputLossy.txt  test.sh  testLosslessCodec.sh  testLossyCodec.sh
PartB/classes/: BitStream.h  Golomb.cpp  Golomb.h
PartB/matlab/: channel1.txt  channel2.txt  histogram.m
PartB/matlab/sample01Matlab/FirstOrderCodec/: channel1.txt  channel2.txt
PartB/matlab/sample01Matlab/PolynomialCodec/: channel1.txt  channel2.txt
PartB/matlab/sample01Matlab/RedundancyCodec/: channel1.txt  channel2.txt
PartB/matlab/sample02Matlab/FirstOrderCodec/: channel1.txt  channel2.txt
PartB/matlab/sample02Matlab/PolynomialCodec/: channel1.txt  channel2.txt
PartB/matlab/sample02Matlab/RedundancyCodec/: channel1.txt  channel2.txt
PartB/matlab/sample03Matlab/FirstOrderCodec/: channel1.txt  channel2.txt
PartB/matlab/sample03Matlab/PolynomialCodec/: channel1.txt  channel2.txt
PartB/matlab/sample03Matlab/RedundancyCodec/: channel1.txt  channel2.txt
PartB/matlab/sample04Matlab/FirstOrderCodec/: channel1.txt  channel2.txt
PartB/matlab/sample04Matlab/PolynomialCodec/: channel1.txt  channel2.txt
PartB/matlab/sample04Matlab/RedundancyCodec/: channel1.txt  channel2.txt
PartB/matlab/sample05Matlab/FirstOrderCodec/: channel1.txt  channel2.txt
PartB/matlab/sample05Matlab/PolynomialCodec/: channel1.txt  channel2.txt
PartB/matlab/sample05Matlab/RedundancyCodec/: channel1.txt  channel2.txt
PartB/matlab/sample06Matlab/FirstOrderCodec/: channel1.txt  channel2.txt
PartB/matlab/sample06Matlab/PolynomialCodec/: channel1.txt  channel2.txt
PartB/matlab/sample06Matlab/RedundancyCodec/: channel1.txt  channel2.txt
PartB/matlab/sample07Matlab/FirstOrderCodec/: channel1.txt  channel2.txt
PartB/matlab/sample07Matlab/PolynomialCodec/: channel1.txt  channel2.txt
PartB/matlab/sample07Matlab/RedundancyCodec/: channel1.txt  channel2.txt
PartB/matlabLossy/: histogram.asv  histogram.m
PartB/results/: outputLosslessCodec.txt
PartB/results/sample01Results/FirstOrderCodec/: sample01
PartB/results/sample01Results/PolynomialCodec/: sample01
PartB/results/sample01Results/RedundancyCodec/: sample01
PartB/results/sample02Results/FirstOrderCodec/: sample02
PartB/results/sample02Results/PolynomialCodec/: sample02
PartB/results/sample02Results/RedundancyCodec/: sample02
PartB/results/sample03Results/FirstOrderCodec/: sample03
PartB/results/sample03Results/PolynomialCodec/: sample03
PartB/resultsLossy/: output_10bits.txt  output_4bits.txt  output_7bits.txt
PartB/resultsLossy/output/: output_01bits.txt  output_02bits.txt  output_03bits.txt  output_05bits.txt  output_06bits.txt  output_08bits.txt  output_09bits.txt  output_11bits.txt  output_12bits.txt  output_13bits.txt  output_14bits.txt  output_15bits.txt
PartC/: CMakeLists.txt  decoder.cpp  decoderLossless.cpp  decoderLossy.cpp  encoder.cpp  encoderLossless.cpp  encoderLossy.cpp  ex1.cpp  histogram.m  histogramLossy.m  testLossless.sh  testLossy.sh
PartC/compressedResults/lossless/: airplane  anemone  arial  baboon  bike3  boat  girl  house  lena  monarch  peppers  tulips
PartC/compressedResults/lossy/: airplane  anemone  arial  baboon  bike3  boat  girl  house  lena  monarch  peppers  tulips
PartC/matlab/: UFrequence.txt  UFrequency.txt  VFrequency.txt
PartC/results/lossless/: airplane_7.txt  anemone_7.txt  arial.txt  arial_7.txt  baboon.txt  bike3.txt  bike3_7.txt  boat_7.txt  girl.txt  girl_7.txt  house.txt  lena.txt  lena_7.txt  monarch_7.txt  peppers_7.txt  tulips.txt  tulips_7.txt
(+668 files in other folders)
